--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TicTacToeJS",
   "version": "1.0.0",
-  "description": "Implementation of classic TicTacToe game is JavaScript",
+  "description": "Implementation of classic TicTacToe game in JavaScript",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/przewnic/TicTacToeJS#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
